--- a/E-commerce screen/style.css
+++ b/E-commerce screen/style.css
@@ -38,7 +38,7 @@ nav ul li {
 main { 
     display: flex;
     flex-direction: column;
-    margin: 2%;
+    margin: 20px;
 }
 
 h1 {
@@ -46,7 +46,7 @@ h1 {
     font-weight: 700;
     color: #999999;
     text-transform: uppercase;
-    margin-left: 2%;
+    margin-left: 20px;
 }
 
 #panel {
@@ -61,6 +61,31 @@ h1 {
     border-radius: 3px;
     background-color: white;
 }
+
+    #left ul { 
+        list-style: none;
+        padding: 0px;
+        margin: 0px;
+    }
+
+    #left ul li {
+        border: 1px solid #EEEEEE;
+        padding: 15px;
+        margin: 17px;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        
+    }
+
+    #left ul li img { 
+        width: 60px;
+        margin-right: 30px;
+    }
+
+    #left ul li span {
+        width: 85%;
+    }
 
 #right { 
     width: 20%;
