--- a/E-commerce screen/style.css
+++ b/E-commerce screen/style.css
@@ -89,8 +89,53 @@ h1 {
 
 #right { 
     width: 20%;
-    border: 1px solid #CCCCCC;
-    border-radius: 3px;
     margin-left: 20px;
     margin-right: 20px;
 }
+
+    #right ul {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        text-transform: uppercase;
+        margin: 0px;
+        padding: 0px;
+        border: 1px solid #CCCCCC;
+        border-radius: 3px;
+    }
+
+    #right ul li {
+        display: flex;
+        padding: 15px;
+        align-items: center;
+        justify-content: space-between;
+        height: 15px;
+    }
+
+    #right ul li h5 {
+        margin: 0px;
+        padding: 0px;
+    }
+
+    #right .discount {
+        color: #FF7800;
+    }
+
+    #right .total {
+        margin-top: 20px;
+        font-weight: bold;
+    }
+
+    #right button {
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25), inset 0px -3px 0px #D45A00;
+        width: 100%;
+        height: 67px;
+        margin-top: 15px;
+        background-color: #FF7800;
+        border: 0px;
+        color: white;
+        font-size: 20px;
+        text-transform: uppercase;
+        font-weight: bold;
+        border-radius: 3px;
+    }
