--- a/E-commerce screen 2/style.css
+++ b/E-commerce screen 2/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0px;
     background-color: #ebebeb;
 
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial;
 }
 
 nav {
@@ -34,3 +34,83 @@ nav {
     nav .active {
         color: black;
     }
+
+main h2 {
+    margin-left: 20px;
+    text-transform: uppercase;
+}    
+
+#princ {
+    width: 100%;
+    justify-content: space-around;
+    display: flex;
+}
+    
+    #left {
+        width: 73%;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        background-color: white;
+
+    }
+
+    form {
+        width: 45%;
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        font-size: 15px;
+        font-weight: bold;
+    }
+
+        form input {
+            height: 35px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+        form input::placeholder {
+            padding: 5px;
+            font-size: 15px;
+        }
+
+        #security {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        #validity {
+            width: 60%;
+            display: flex;
+            flex-direction: column;
+            
+        }
+
+        #cvv {
+            width: 35%;
+            display: flex;
+            flex-direction: column;
+        }
+
+    #right {
+        width: 23%;
+        border: 1px solid #ccc;
+    }
+
+        #right ul{
+            list-style: none;
+            padding: 0px;
+            margin: 0px;
+            display: flex;
+            flex-direction: column;
+        }
+
+        #right ul li {
+            display: flex;
+            justify-content: space-around;
+        }
