--- a/E-commerce screen 2/style.css
+++ b/E-commerce screen 2/style.css
@@ -99,18 +99,65 @@ main h2 {
 
     #right {
         width: 23%;
-        border: 1px solid #ccc;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        
     }
 
         #right ul{
             list-style: none;
             padding: 0px;
             margin: 0px;
+            margin-bottom: 10px;
             display: flex;
             flex-direction: column;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: white;
+
         }
 
         #right ul li {
             display: flex;
-            justify-content: space-around;
+            justify-content: space-between;
+            align-items: center;
+            height: 20px;
+            margin: 5px;
+            padding: 5px;
+            text-transform: uppercase;
+            font-size: 25px;
+        }
+
+        .total {
+            font-weight: bold !important;
+            margin-top: 30px !important;
+        }
+
+        .total h5 {
+            font-weight: bold !important;
+        }
+
+        #right ul li h5 {
+            margin: 0px;
+            padding: 0px;
+            font-weight: 100;
+        }
+
+        #right button { 
+            height: 60px;
+            width: 100%;
+            font-size: 25px;
+            text-transform: uppercase;
+            font-weight: bold;
+            background-color: orange;
+            border-radius: 5px;
+            border: 0px;
+            color: white;
+            box-shadow: 0px 3px 0px rgb(60, 39, 0);
+            cursor: pointer;
+        }
+
+        #right button:hover {
+            background-color: rgba(255, 166, 0, 0.511);
         }
